--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "backend/model"]
-	path = backend/model
+[submodule "api/model"]
+	path = api/model
 	url = https://github.com/Hung000anh/Smart-Attendance-AI
